--- a/Views/AdminMessage/Index.cshtml
+++ b/Views/AdminMessage/Index.cshtml
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col-12">
             <div class="card shadow">
-                <div class="card-header bg-dark text-white">
+                <div class="card-header bg-primary text-Dark">
                     <h4 class="mb-0"><i class="fas fa-envelope me-2"></i>Pending Buyer Messages</h4>
                 </div>
                 <div class="card-body">
@@ -24,7 +24,7 @@
                     {
                         <div class="table-responsive">
                             <table class="table table-striped table-hover">
-                                <thead class="table-dark">
+                                <thead class="table-primary">
                                     <tr>
                                         <th>Name</th>
                                         <th>Email</th>
