--- a/Views/Admins/Index.cshtml
+++ b/Views/Admins/Index.cshtml
@@ -45,9 +45,9 @@
                         }
                     </td>
                     <td>
-                        <a asp-action="UserDetail" asp-route-id="@user.Id" class="btn btn-sm btn-info">Details</a>
+                        <a asp-action="UserDetail" asp-route-id="@user.Id" class="btn text-black btn-sm btn-outline-info">Details</a>
 
-                        <a asp-action="UserDisable" asp-route-id="@user.Id" class="btn btn-primary btn-sm">Disable</a>
+                        <a asp-action="UserDisable" asp-route-id="@user.Id" class="btn btn-outline-primary text-black btn-sm">Disable</a>
                         @* <a asp-action="Delete" asp-route-id="@user.Id" class="btn btn-danger btn-sm">Delete</a> *@
                     </td>
                 </tr>
