--- a/Views/Admins/ListProducts.cshtml
+++ b/Views/Admins/ListProducts.cshtml
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-12">
             <div class="card shadow">
-                <div class="card-header bg-danger text-white">
+                <div class="card-header bg-primary text-white">
                     <h4 class="mb-0">
                         <i class="fas fa-list me-2"></i>All Products - Admin View
                     </h4>
