--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -16,9 +16,9 @@
     <table class="table table-bordered table-striped shadow-sm rounded-3">
         <thead class="table-dark">
             <tr>
-                <th>S.N</th>
-                <th>@Html.DisplayNameFor(model => model.First().CategoryType)</th>
-                <th style="width: 25%">Actions</th>
+                <th style="width: 15%">S.N</th>
+                <th style="width: 40%">@Html.DisplayNameFor(model => model.First().CategoryType)</th>
+                <th style="width: 20%">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -28,15 +28,15 @@
                     <td>@sn</td>
                     <td>@item.CategoryType</td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning me-1">
+                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-warning text-black me-1">
                             <i class="fas fa-edit"></i> Edit
                         </a>
-                        <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-info me-1">
+                        <a asp-action="Details" asp-route-id="@item.Id" class="btn text-black btn-sm btn-outline-info me-1">
                             <i class="fas fa-info-circle"></i> Details
                         </a>
                         <form asp-action="Delete" asp-route-id="@item.Id" method="post" class="d-inline"
                               onsubmit="return confirm('Are you sure you want to delete this category?');">
-                            <button type="submit" class="btn btn-sm btn-danger">
+                            <button type="submit" class="btn btn-sm text-black btn-outline-danger">
                                 <i class="fas fa-trash-alt"></i> Delete
                             </button>
                         </form>
