--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -119,6 +119,12 @@
                                     <i class="fas fa-business-time me-1"></i>Buyer Applications
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="ChatBotFAQ" asp-action="Index">
+                                    <i class="fas fa-robot me-2"></i> FAQs Chatbot
+                                </a>
+                            </li>
+
                         }
 
                         @* Add every user accessible nav here *@
