--- a/Views/Admins/Profile.cshtml
+++ b/Views/Admins/Profile.cshtml
@@ -5,6 +5,9 @@
     ViewData["Title"] = "Admin Profile";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/Profile.css" asp-append-version="true" />
+}
 
 <div class="profile-container">
     <div class="profile-header">
