--- a/Views/Buyer/Profile.cshtml
+++ b/Views/Buyer/Profile.cshtml
@@ -3,6 +3,10 @@
 @{
     ViewData["Title"] = "Buyer Profile";
 }
+@section Styles {
+    <link rel="stylesheet" href="~/css/Profile.css" asp-append-version="true" />
+}
+
 
 <div class="profile-container">
     <div class="profile-header">
