--- a/Views/FAQs/SellerFAQ.cshtml
+++ b/Views/FAQs/SellerFAQ.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "FAQs";
 
 }
+@section Styles {
+    <link rel="stylesheet" href="~/css/FAQs.css" asp-append-version="true" />
+}
+
 
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
