--- a/wwwroot/css/Profile.css
+++ b/wwwroot/css/Profile.css
@@ -1,6 +1,4 @@
-﻿body {
-    padding-top: 70px;
-}
+﻿
 :root {
     --primary-color: #3498db;
     --danger-color: #e74c3c;
@@ -122,7 +120,7 @@
 }
 
 /* Responsive Design */
-@@media (max-width: 768px) {
+@media (max-width: 768px) {
     .profile-header {
         flex-direction: column;
         align-items: flex-start;
