--- a/wwwroot/css/account.css
+++ b/wwwroot/css/account.css
@@ -1,4 +1,5 @@
-﻿.account-container {
+﻿
+.account-container {
     background-image: url('../Images/stationary.jpg');
     background-size: cover;
     background-position: center;
