--- a/Views/Home/Warranty.cshtml
+++ b/Views/Home/Warranty.cshtml
@@ -63,7 +63,7 @@
                 </div>
                 <div class="card-body">
                     <ol>
-                        <li><strong>Contact Us:</strong> Email support@yourstore.com or call +977-1-XXXXXXX</li>
+                        <li><strong>Contact Us:</strong> Email supportdemo@gmail.com or call +977-98XXXXXX</li>
                         <li><strong>Provide:</strong> Order number, product details, and photos of issue</li>
                         <li><strong>Wait:</strong> We'll respond within 2-3 business days</li>
                         <li><strong>Send Product:</strong> Ship to our address (if approved)</li>
@@ -92,9 +92,9 @@
                 <div class="card-body text-center">
                     <h5>Need Help?</h5>
                     <p>
-                        <i class="fas fa-envelope me-2"></i>Email: support@yourstore.com<br>
-                        <i class="fas fa-phone me-2"></i>Phone: +977-1-XXXXXXX<br>
-                        <i class="fas fa-clock me-2"></i>Hours: Mon-Fri 9AM-6PM
+                        <i class="fas fa-envelope me-2"></i>Email: supportdemo@gmail.com<br>
+                        <i class="fas fa-phone me-2"></i>Phone: +977-98XXXXXX<br>
+                        <i class="fas fa-clock me-2"></i>Hours: Sun-Fri 9AM-6PM
                     </p>
                 </div>
             </div>
